# google-authenticator

./: .gitignore  .hgignore  .hgsub  .hgsubstate  .travis.yml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
libpam/: .travis.yml  FILEFORMAT  Makefile  Makefile.am  README  README.md  base32.c  base32.h  base32_prog.c  base32_test.sh  bootstrap.sh  configure.ac  demo.c  google-authenticator.c  google_authenticator.cfg.example  hmac.c  pam_google_authenticator.c  pam_google_authenticator_unittest.c  sha1.c  sha1.h  totp.html
libpam/autoconf-archive/: README.txt
libpam/contrib/: README.rpm.md  rpm.spec.in
libpam/examples/: demo.c
libpam/src/: base32.h  google-authenticator.c  hmac.h  pam_google_authenticator.c  sha1.c  sha1.h
libpam/tests/: pam_google_authenticator_unittest.c
libpam/utc-time/: app.yaml  utc-time.py
mobile/android/: .project  AndroidManifest.xml  README  build.properties
mobile/android/res/drawable/: widget_border.xml
mobile/android/res/layout/: check_code.xml  enter_key.xml  main.xml  rename.xml  user_row.xml  user_row_legacy.xml  widget_main.xml
mobile/android/res/menu/: main.xml
mobile/android/res/values/: strings.xml  themes.xml
mobile/android/res/xml/: authenticator_widget_provider.xml
mobile/blackberry/: BlackBerry_App_Descriptor.xml  GoogleAuthenticator.jdp  NOTICE  application.properties  build.xml
mobile/blackberry/entry/: startup.properties  uri.properties
mobile/ios/: OTPAuth-Info.plist  OTPAuth.pch  OTPAuthUnitTest-Info.plist  README  main.m
mobile/ios/Classes/: HOTPGenerator.h  HOTPGenerator.m  HOTPGeneratorTest.m  OTPAuthAboutController.h  OTPAuthAboutController.m  OTPAuthAppDelegate.h  OTPAuthAppDelegate.m  OTPAuthApplication.h  OTPAuthApplication.m  OTPAuthBarClock.h  OTPAuthBarClock.m  OTPAuthURL.h  OTPAuthURL.m  OTPAuthURLEntryController.h  OTPAuthURLEntryController.m  OTPAuthURLTest.m  OTPGenerator.h  OTPGenerator.m  OTPScannerOverlayView.h  OTPScannerOverlayView.m  OTPTableView.h  OTPTableView.m  OTPTableViewCell.h  OTPTableViewCell.m  OTPWelcomeViewController.h  OTPWelcomeViewController.m  RootViewController.h  RootViewController.m  TOTPGenerator.h  TOTPGenerator.m  TOTPGeneratorTest.m  UIColor+MobileColors.h  UIColor+MobileColors.m
mobile/ios/OTPAuth.xcodeproj/: project.pbxproj
mobile/ios/Resources/: Hints.html  MainWindow.xib  OTPAuthAboutController.xib  OTPAuthURLEntryController.xib  OTPTableViewCell.xib  OTPWelcomeViewController.xib  RootViewController.xib  iOSIcon-Auth.psd
mobile/ios/Resources/English.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/ar.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/bg.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/ca.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/cs.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/da.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/de.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/de_AT.lproj/: LegalNotices.html
mobile/ios/Resources/de_CH.lproj/: LegalNotices.html
mobile/ios/Resources/el.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/en_GB.lproj/: LegalNotices.html
mobile/ios/Resources/en_IE.lproj/: LegalNotices.html
mobile/ios/Resources/en_IN.lproj/: LegalNotices.html
mobile/ios/Resources/en_SG.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/en_ZA.lproj/: LegalNotices.html
mobile/ios/Resources/es.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/fi.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/fil.lproj/: LegalNotices.html
mobile/ios/Resources/fr.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/fr_CH.lproj/: LegalNotices.html
mobile/ios/Resources/gsw.lproj/: LegalNotices.html
mobile/ios/Resources/he.lproj/: LegalNotices.html
mobile/ios/Resources/hi.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/hr.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/hu.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/id.lproj/: LegalNotices.html
mobile/ios/Resources/in.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/it.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/iw.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/ja.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/ko.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/ln.lproj/: LegalNotices.html
mobile/ios/Resources/lt.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/lv.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/mo.lproj/: LegalNotices.html
mobile/ios/Resources/nl.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/no.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/pl.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/pt.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/pt_BR.lproj/: LegalNotices.html
mobile/ios/Resources/pt_PT.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/ro.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/ru.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/sk.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/sl.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/sr.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/sv.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/th.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/tl.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/tr.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/uk.lproj/: LegalNotices.html  Localizable.strings
mobile/ios/Resources/vi.lproj/: LegalNotices.html  Localizable.strings
(+90 files in other folders)
